# shopinvader-keycloak

./: .gitignore  .prettierrc  README.md  config-example.json  docker-compose.yml  package.json  pyproject.toml  secrets-example.json
anonymous_authenticator/: serve.mjs  utils.mjs
guest-authenticator/: serve.mjs  utils.mjs
oidc-guest-provider/: serve.py
src/: App.vue  cart.js  config.json  main.js  utils.js
src/components/: Actions.vue  Cart.vue  Debug.vue  Logo.vue  Main.vue  User.vue
src/services/: base.js  cart.js  customer.js
