[tool.poetry]
name = "shopinvader-keycloak"
version = "0.1.0"
description = ""
authors = ["Florian Mounier <paradoxxx.zero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
pyop = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
